--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="shortcut icon" href="rickrollicon.png">
 		<style>
 			body {
-				background-color: #222;
+				background-color: #8B00FF;
 				color: white;
 				font-family: sans-serif;
 				user-select: none;
